refactor: i changed description of package and readme.md file

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "usmonaliyev/redium",
-  "description": "-",
+  "description": "A high-performance laravel package powered by redis, inspired by sanctum.",
   "keywords": [
     "usmonaliyev",
     "laravel",
