refactor: docs url and repo urls are fixed

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "redium",
     "sanctum"
   ],
-  "homepage": "https://github.com/usmonaliyev/redium",
+  "homepage": "https://github.com/usmonaliyev99/redium",
   "license": "MIT",
   "type": "library",
   "authors": [
